--- a/gra1750p02MabelPerez2024/index.html
+++ b/gra1750p02MabelPerez2024/index.html
@@ -8,7 +8,7 @@
 <body>
 <wrapper>
 <img 
-src=" file:///Users/mabez/Desktop/gra1750p02MabelPerez2024/Online%20Recipes.jpg" width="200" height="100"/>
+src="Online-Recipes.jpg" width="200" height="100"/>
 <h1> Bites Online Recipes </h1>
 <h2>Bakery Style Chocolate Chip Cookies</h2>	
 <p>Ultra thick Bakery Style Chocolate Chip Cookies feature golden brown edges with ooey and gooey centers. This easy recipe can be made in 30 minutes!</p>
